tests/bad/include_data/wrong_size.rs
fn main() {}

static TOO_SHORT: [u16; 30] = include_data::include_data!("../../test_data/binary_64");
